# calculatable-society

./: .gitignore  docker-compose.yml  draft.md  py.py  前言目录.md  基于随机森林的叫价模型.md  基本原则.md  基本概念.md
backend/: .env  Cargo.toml  Dockerfile  build.rs  test.py
backend/.devcontainer/: devcontainer.json
backend/app_context/: Cargo.toml
backend/app_context/src/: lib.rs
backend/back-core/: Cargo.toml
backend/back-core/src/context/: core_context.rs  mod.rs
backend/back-core/src/context/db/: connection.rs
backend/back-core/src/context/redis/: connection.rs
backend/back_core/: Cargo.toml
backend/back_core/src/: lib.rs  model.rs  repository.rs
backend/back_core/src/context/: core_context.rs  mod.rs
backend/back_core/src/context/db/: db_contexted.rs  mod.rs
backend/back_core/src/dto/: dto_property_params.rs  dto_subtance_type.rs  mod.rs
backend/backend_core/: Cargo.toml
backend/backend_core/src/: lib.rs  model.rs  repository.rs
backend/backend_core/src/dto/: dto_preference_value.rs  dto_property_params.rs  dto_resource_amount.rs  dto_subtance_type.rs  mod.rs
backend/components/: Cargo.toml
backend/components/src/: component.rs  game_context.rs  lib.rs
backend/components/src/_commute/: mod.rs  t_from_dto.rs
backend/components/src/agent/: agent.rs  location.rs  mod.rs  mover.rs  preference.rs  preference_value.rs  preferences.rs  resource_amount.rs  resources.rs
backend/components/src/agent_relevant/preference/: definition.rs
backend/components/src/environment/: cartesian_vec_2d.rs  coordinate.rs  coordinate_offset.rs  coordinate_shift.rs  diffuse_info.rs  diffusion_engine.rs  direction_offset.rs  generatable.rs  hexagon_diagonals.rs  hexagon_neighbours.rs  landscape.rs  layer.rs  map_size.rs  mod.rs  noise_params.rs  potential.rs  resource_distribution.rs  statistics.rs  subtance_distribution.rs  subtance_distribution_state.rs  t_hexagon.rs  t_indexed.rs  t_noise_generatable.rs  t_statistical.rs  t_statistics.rs  toroidal_map.rs
backend/components/src/environment/env_dynamic/: mod.rs  t_env_dynamic.rs
backend/components/src/environment/hexagon/: diagonal_relation.rs  hex_block.rs  hex_spoke.rs  hex_unit.rs  indexed_unit_change.rs  mod.rs  neighbour_relation.rs  t_hexa_distanced.rs  t_hexa_relational.rs  unit_change.rs
backend/components/src/environment/layers/: altitude.rs  layer_trait.rs  mod.rs
backend/components/src/environment/noise_map/: main.rs  mod.rs  noise_map_params.rs  noise_map_stats.rs  noise_map_type.rs
backend/components/src/shared/: mod.rs  property copy.rs  property.rs  property_param.rs  resource.rs  resource_type.rs  resource_type_coefficient.rs  resources.rs  subtance.rs  subtance_type.rs
backend/components/src/shared/resource/: definition.rs  mod.rs
backend/config/: mod.rs
backend/config/consts/: const_modules.rs  const_routes.rs  mod.rs
backend/context/: Cargo.toml
backend/context/src/: _error.rs  lib.rs
backend/context/src/db/: connection.rs  context.rs  db_contextd.rs  mod.rs
backend/database/: Cargo.toml
backend/decla_macro/: Cargo.toml
backend/decla_macro/src/: enum_map.rs
backend/game/: Cargo.toml
backend/game/src/: game_context.rs  lib.rs
backend/game/src/agent/: location.rs  mod.rs  mover.rs  resources.rs
backend/game/src/environment/: landscape.rs  map_size.rs  noise_params.rs  potential.rs  subtance_distribution.rs  t_noise_generatable.rs  t_statistical.rs
backend/game/src/environment/hexagon/: diagonal_relation.rs  hex_block.rs  hex_coord.rs  hex_displacemant.rs  hex_unit.rs  indexed_unit_change.rs  neighbour_relation.rs  t_hexa_distanced.rs  t_hexa_relational.rs
backend/game/src/shared/: property.rs
backend/log/: Cargo.toml  app.json.2024-10-26  log_config.rs
backend/log/src/: lib.rs
backend/macros/: Cargo.toml
backend/macros/decla_macro/src/: enum_map.rs  lib.rs
backend/macros/proce_macro/: Cargo.toml
backend/macros/proce_macro/src/: lib.rs
backend/macros/proce_macro/src/attribute/: mod.rs  property_model.rs
backend/macros/src/: lib.rs
backend/macros/src/components/: property_map.rs
backend/macros/src/derive/: mod.rs  property_map.rs
backend/migrations/: 20241026194900_create_resource_table.sql  20241026201505_create_properties_table.sql  20241026202100_remove_id_from_resource_table.sql  20241027153150_create_properties_table.sql  20241027154709_create_resources_table.sql  20241028184331_create_preferences_table.sql
backend/models/: Cargo.toml
backend/models/src/: property.rs
backend/my-proc-macro/: Cargo.toml
backend/my-proc-macro/src/: lib.rs
backend/proce_macro/: Cargo.toml
backend/proce_macro/src/: lib.rs
backend/proce_macro/src/attribute/: property_model.rs
backend/proce_macro/src/derive/: property_map.rs
backend/repositories/: Cargo.toml
backend/repositories/src/: lib.rs
backend/share-and-commute/: Cargo.toml
backend/share-and-commute/src/: lib.rs
backend/share-and-commute/src/errors/: context_error.rs  mod.rs
backend/share-and-commute/src/macro_rules/: enum_map.rs
backend/src/: main.rs
backend/src/_config/: mod.rs
backend/src/_config/consts/: const_modules.rs  const_routes.rs
backend/src/_config/database/: database_config.rs  mod.rs
backend/src/_config/log/: log_config.rs  mod.rs
backend/src/components/: component.rs  mod.rs
backend/src/components/agent_relevant/preference/: definition.rs  mod.rs
backend/src/events/: event_registry.rs  event_type.rs  mod.rs
backend/src/models/: agent.rs
backend/src/repositories/shared/: property.rs
backend/types/: Cargo.toml
backend/types/src/: lib.rs
backend/types/src/components_types/: mod.rs
backend/utils/: Cargo.toml
backend/utils/src/: lib.rs
(+142 files in other folders)
