[workspace]
members = ["game", "back_core", "log", "utils"]

[package]
name = "ess"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = [] }
log = { path = "./log" }
back_core = { path = "./back_core" }
tracing = "*"

[[bin]]
name = "ess"
path = "src/main.rs"
