[workspace]
members = ["game", "back_core", "log", "utils", "auth", "my-proc-macro"]

[package]
name = "re-hive"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = [] }
log = { path = "./log" }
back_core = { path = "./back_core" }
tracing = "*"

[[bin]]
name = "re-hive"
path = "src/main.rs"
