[workspace]
members = ["game", "back-core", "log", "my-proc-macro", "share-and-commute"]

[package]
name = "re-hive"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = [] }
log = { path = "./log" }
back-core = { path = "./back-core" }
tracing = "*"

[[bin]]
name = "re-hive"
path = "src/main.rs"
