[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { version = "*", features = ["serde"] }
tracing = "*"
validator = "*"
utils = { path = "../utils" }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "macros"] }
rayon = "*"
tokio = { version = "*", features = ["sync"] }
context = { path = "../context" }
futures = "*"
