[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { version = "*", features = ["serde"] }
tracing = "*"
validator = "*"
utils = { path = "../utils" }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "macros", "uuid"] }
rayon = "*"
tokio = { version = "*", features = ["sync"] }
context = { path = "../context" }
futures = "*"
uuid = "*"
noise = "*"
ndarray = { version = "*", features = ["rayon", "serde"] }
rand = "*"
num-traits = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
