[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { version = "*", features = ["serde"] }
tracing = "*"
validator = "*"
utils = { path = "../utils" }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "macros", "uuid"] }
rayon = "*"
tokio = { version = "*", features = ["sync"] }
back_core = { path = "../back_core" }
futures = "*"
noise = "*"
ndarray = { version = "*", features = ["rayon", "serde"] }
rand = "*"
num-traits = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
once_cell = "*"
uuid = { version = "*", features = ["v4"] }
thiserror = "*"
