[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { version = "*", features = ["serde"] }
tracing = "*"
validator = "*"
my-proc-macro = { path = "../my-proc-macro" }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "macros", "uuid"] }
share-and-commute = { path = "../share-and-commute" }
rayon = "*"
tokio = { version = "*", features = ["sync"] }
back-core = { path = "../back-core" }
futures = "*"
noise = "*"
ndarray = { version = "*", features = ["rayon", "serde"] }
rand = "*"
num-traits = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
once_cell = "*"
uuid = { version = "*", features = ["v4"] }
thiserror = "*"
